--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -239,6 +239,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/4358455?v=4",
       "profile": "https://www.linkedin.com/in/mathpaquette/",
       "contributions": [
+        "code",
         "doc"
       ]
     },
